New function was built to facilitate the creation of institutions/blocks along with a journey that includes more than two options

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> -->
-    <title>Pixi Tutorial</title>
+    <title>Young Grasshopper in Wild!</title>
     <style>
         body {
             margin: 0;
@@ -47,7 +47,9 @@
 
     <div id="quest-dialog" style="display: none;">
         <p>Would you like to start this quest? Yes or No.</p>
-        <button id="yes-btn">Yes</button>
+        <button id="career1-btn">Business</button>
+        <button id="career2-btn">Technology</button>
+        <button id="career3-btn">Social Sciences</button>
         <button id="no-btn">No</button>
     </div>
 </body>
