Bug was fixed that was causing dialogue box to appear when collision between sprite and boxes took place

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <script src="./src/game_app.js"></script>
 
     <div id="quest-dialog" style="display: none;">
-        <p>Would you like to start this quest? Yes or No.</p>
+        <p>Which quest would you like to start?</p>
         <button id="career1-btn">Business</button>
         <button id="career2-btn">Technology</button>
         <button id="career3-btn">Social Sciences</button>
-        <button id="no-btn">No</button>
+        <button id="no-btn">None</button>
     </div>
 </body>
 
