Code base was restructured. Exporting functions, configs, and styles to utils and config folder to streamline code development.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> -->
     <title>Young Grasshopper in Wild!</title>
     <style>
         body {
@@ -56,7 +53,7 @@
 
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/7.2.0/pixi.min.js"></script>
-    <script src="./src/game_app.js"></script>
+    <script type="module" src="./src/main.js"></script>
 
     <div id="quest-dialog" style="display: none;">
         <div id="dialog-text-container">
