Whenever user makes selection, they're brought to a new career selection complete page.

--- a/public/webpage/publicUniversity.html
+++ b/public/webpage/publicUniversity.html
@@ -3,30 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../js/loadUniversityIntro.js" defer></script>
+    <script src="../js/loadUniversity.js" defer></script>
     <title>Public University</title>
 </head>
 <body class="public-university">
     <h1>Public University</h1>
-    <p id="welcomeText"></p>
     <div id="career1">
         <h2 class="career-name"></h2>
         <p class="career-description"></p>
         <p class="career-cost"></p>
-        <button id="career-choice" type="button">My pick</button>
+        <button class="career-choice-btn" data-career="career1">Select Career</button>
     </div>
     <div id="career2">
         <h2 class="career-name"></h2>
         <p class="career-description"></p>
         <p class="career-cost"></p>
-        <button id="career-choice" type="button">My pick</button>
+        <button class="career-choice-btn" data-career="career2">Select Career</button>
     </div>
     <div id="career3">
         <h2 class="career-name"></h2>
         <p class="career-description"></p>
         <p class="career-cost"></p>
-        <button id="career-choice" type="button">My pick</button>
-    </div>   
-    <p><a href="index-v2.html">Back to Main Page</a></p>
+        <button class="career-choice-btn" data-career="career3">Select Career</button>
+    </div>
+    <p><a href="islandIndex.html">Back to Main Page</a></p>
 </body>
 </html>
