--- a/public/webpage/privateUniversity.html
+++ b/public/webpage/privateUniversity.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../js/loadUniversityIntro.js" defer></script>
+    <script src="../js/loadUniversity.js" defer></script>
     <title>Private University</title>
 </head>
 <body class="private-university">
@@ -13,20 +13,20 @@
         <h2 class="career-name"></h2>
         <p class="career-description"></p>
         <p class="career-cost"></p>
-        <button id="career-choice" type="button">My pick</button>
+        <button class="career-choice-btn" data-career="career1">Select Career</button>
     </div>
     <div id="career2">
         <h2 class="career-name"></h2>
         <p class="career-description"></p>
         <p class="career-cost"></p>
-        <button id="career-choice" type="button">My pick</button>
+        <button class="career-choice-btn" data-career="career2">Select Career</button>
     </div>
     <div id="career3">
         <h2 class="career-name"></h2>
         <p class="career-description"></p>
         <p class="career-cost"></p>
-        <button id="career-choice" type="button">My pick</button>
-    </div>   
-    <p><a href="index-v2.html">Back to Main Page</a></p>
+        <button class="career-choice-btn" data-career="career3">Select Career</button>
+    </div>
+    <p><a href="islandIndex.html">Back to Main Page</a></p>
 </body>
 </html>
