Functionality was created that would present the career curriculum to the user when making their selection

--- a/public/webpage/publicUniversity.html
+++ b/public/webpage/publicUniversity.html
@@ -8,6 +8,7 @@
 </head>
 <body class="public-university">
     <h1>Public University</h1>
+    <p id="welcomeText"></p>
     <div id="career1">
         <h2 class="career-name"></h2>
         <p class="career-description"></p>
