Future webpages were created to simulate users going through all four years of college.

--- a/public/webpage/islandIndex.html
+++ b/public/webpage/islandIndex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="grasshopper-style.css"> -->
+    <link rel="stylesheet" href="grasshopper-style.css">
     <title>Grasshopper Island</title>
 </head>
 
@@ -12,9 +12,9 @@
     <div id="greetings">
         <h2>Welcome to Grasshopper Island</h2>
         <p>Select the university option that you'd like to explore</p>
-        <a href="privateUniversity.html">Private University</a>
+        <a href="./universityMain/privateUniversity.html">Private University</a>
         <br>
-        <a href="publicUniversity.html">Public University</a>
+        <a href="./universityMain/publicUniversity.html">Public University</a>
     </div>
     <div id="publicUniversity">
 
