--- a/public/webpage/universityMain/publicUniversity.html
+++ b/public/webpage/universityMain/publicUniversity.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../js/loadUniversity.js" defer></script>
-    <title>Private University</title>
+    <title>Public University</title>
 </head>
-<body class="private-university">
-    <h1>Private University</h1>
+<body class="public-university">
+    <h1>Public University</h1>
     <p id="welcomeText"></p>
     <div id="career1">
         <h2 class="career-name"></h2>
@@ -27,6 +27,6 @@
         <p class="career-cost"></p>
         <button class="career-choice-btn" data-career="career3">Select Career</button>
     </div>
-    <p><a href="islandIndex.html">Back to Main Page</a></p>
+    <p><a href="islandIndex.html">Back to the field</a></p>
 </body>
 </html>
