--- a/public/webpage/universityMain/privateUniversity.html
+++ b/public/webpage/universityMain/privateUniversity.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../js/loadUniversity.js" defer></script>
-    <title>Public University</title>
+    <title>Private University</title>
 </head>
-<body class="public-university">
-    <h1>Public University</h1>
+<body class="private-university">
+    <h1>Private University</h1>
     <p id="welcomeText"></p>
     <div id="career1">
         <h2 class="career-name"></h2>
         <p class="career-description"></p>
         <p class="career-cost"></p>
-        <button class="career-choice-btn" data-career="career1">Select Career</button>
+        <button class="career-choice-btn focusable" data-career="career1">Select Career</button>
     </div>
     <div id="career2">
         <h2 class="career-name"></h2>
@@ -27,6 +27,6 @@
         <p class="career-cost"></p>
         <button class="career-choice-btn" data-career="career3">Select Career</button>
     </div>
-    <p><a href="islandIndex.html">Back to Main Page</a></p>
+    <p><a href="islandIndex.html">Back to the field</a></p>
 </body>
 </html>
