Fixed webpage and script routing bugs

--- a/public/webpage/collegeYears/careerStart.html
+++ b/public/webpage/collegeYears/careerStart.html
@@ -8,7 +8,7 @@
     </head>
     <body class="year-four">
         <h1>Welcome to the start of your career!</h1>
-        <!-- <p id="yearFourWelcome">Time for you to go out and put your skills to work! </p>
-        <p><a href="careerStart.html">Welcome to Career Island!</a></p> -->
+        <p id="yearFourWelcome">Time for you to go out and put your skills to work! </p>
+        <p> Congrats on making it this far!</p>
     </body>
 </html>
