--- a/public/webpage/universityMain/careerSelected.html
+++ b/public/webpage/universityMain/careerSelected.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../js/loadCareerSelected.js" defer></script>
+    <script src="../../js/loadCareerSelected.js" defer></script>
     <title>Career Selected</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <ul id="elective-courses"></ul>
     </div>
     
-    <p><a href="islandIndex.html">Back to Main Page</a></p>
+    <p><a href="../collegeYears/yearOne.html">Start your first year</a></p>
 </body>
 
 </html>
