--- a/public/webpage/universityMain/privateUniversity.html
+++ b/public/webpage/universityMain/privateUniversity.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../js/loadUniversity.js" defer></script>
+    <script src="../../js/loadUniversity.js" defer></script>
     <title>Private University</title>
 </head>
 <body class="private-university">
@@ -27,6 +27,6 @@
         <p class="career-cost"></p>
         <button class="career-choice-btn" data-career="career3">Select Career</button>
     </div>
-    <p><a href="islandIndex.html">Back to the field</a></p>
+    <p><a href="../islandIndex.html">Back to the field</a></p>
 </body>
 </html>
