Job selection option build was initiated

--- a/public/webpage/collegeYears/yearOne.html
+++ b/public/webpage/collegeYears/yearOne.html
@@ -9,6 +9,10 @@
     <body class="year-one">
         <h1>Welcome to Year One</h1>
         <p id="yearOneWelcome"></p>
+        <h2>Consider these working options below:</h2>
+        <li>Don't work this year</li>
+        <li>Work Part-time</li>
+        <li>Work Full-time</li>
         <p><a href="./yearTwo.html">Onto year two of college!</a></p>
     </body>
 </html>
