--- a/public/webpage/universityMain/degreeSelected.html
+++ b/public/webpage/universityMain/degreeSelected.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../../js/loadCareerSelected.js" defer></script>
-    <title>Career Selected</title>
+    <script src="../../js/loadDegreeSelected.js" defer></script>
+    <title>Degree Selected</title>
 </head>
 <body>
     <h2>Congrats on your selection</h2>
-    <div id="selectedCareerDetails">
-        <h2 id="career-name"></h2>
-        <p id="career-description"></p>
-        <p id="career-cost"></p>
+    <div id="selectedDegreeDetails">
+        <h2 id="degree-name"></h2>
+        <p id="degree-description"></p>
+        <p id="degree-cost"></p>
     
         <h3>Core Courses</h3>
         <ul id="core-courses"></ul>
