--- a/public/webpage/universityMain/privateUniversity.html
+++ b/public/webpage/universityMain/privateUniversity.html
@@ -9,23 +9,23 @@
 <body class="private-university">
     <h1>Private University</h1>
     <p id="welcomeText"></p>
-    <div id="career1">
-        <h2 class="career-name"></h2>
-        <p class="career-description"></p>
-        <p class="career-cost"></p>
-        <button class="career-choice-btn focusable" data-career="career1">Select Career</button>
+    <div id="degree1">
+        <h2 class="degree-name"></h2>
+        <p class="degree-description"></p>
+        <p class="degree-cost"></p>
+        <button class="degree-choice-btn" data-degree="degree1">Select Degree</button>
     </div>
-    <div id="career2">
-        <h2 class="career-name"></h2>
-        <p class="career-description"></p>
-        <p class="career-cost"></p>
-        <button class="career-choice-btn" data-career="career2">Select Career</button>
+    <div id="degree2">
+        <h2 class="degree-name"></h2>
+        <p class="degree-description"></p>
+        <p class="degree-cost"></p>
+        <button class="degree-choice-btn" data-degree="degree2">Select Degree</button>
     </div>
-    <div id="career3">
-        <h2 class="career-name"></h2>
-        <p class="career-description"></p>
-        <p class="career-cost"></p>
-        <button class="career-choice-btn" data-career="career3">Select Career</button>
+    <div id="degree3">
+        <h2 class="degree-name"></h2>
+        <p class="degree-description"></p>
+        <p class="degree-cost"></p>
+        <button class="degree-choice-btn" data-degree="degree3">Select Degree</button>
     </div>
     <p><a href="../islandIndex.html">Back to the field</a></p>
 </body>
